<?php

declare(strict_types=1);

namespace zhang;

abstract class Platform
{
    abstract public function sendMessage();
}
