<?php

declare(strict_types=1);

namespace zhang;

class WeiboPlatform extends Platform
{
    public function sendMessage()
    {
        return 'sent by weibo';
    }
}
